--- a/flights/templates/flights/admin/flight_form.html
+++ b/flights/templates/flights/admin/flight_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="container mt-4">
     <h2>{{ title }}</h2>
@@ -79,4 +80,7 @@
         </div>
     </div>
 </div>
+{% endblock %}
+{% block extra_js %}
+<script src="{% static 'js/flight_form.js' %}"></script>
 {% endblock %}
