--- a/accounts/templates/accounts/user_dashboard/booking_detail_dsh.html
+++ b/accounts/templates/accounts/user_dashboard/booking_detail_dsh.html
@@ -58,16 +58,13 @@
                     </div>
 
                     <div class="mt-4 pt-3 border-top">
-                        <a href="{% url 'home' %}" class="btn btn-primary">Volver al inicio</a>
-                        
-                        <a href="{% url 'dashboard' %}" class="btn btn-primary">
-                            Ir al Panel
-                        </a>
-
                         <a href="{% url 'booking_pdf' booking.id %}" class="btn btn-primary">
                             <i class="fas fa-download me-2"></i>Descargar PDF
                         </a>
                         
+                        <a href="{% url 'dashboard' %}" class="btn btn-outline-secondary">
+                            Volver al Panel
+                        </a>
                     </div>
                 </div>
             </div>
