--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,18 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'js/messages.js' %}"></script>
+    <script>
+    // Bloquear navegación con las flechas del navegador
+    history.pushState(null, null, location.href);
+    window.onpopstate = function(event) {
+        history.go(1);
+    };
+
+    // Limpiar historial al cargar la página
+    if(window.history.replaceState) {
+        window.history.replaceState(null, null, window.location.href);
+    }
+    </script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
